[package]
name = "RaceNG"
version = "1.0.0"
edition = "2021"
authors = ["HistidineDwarf <https://github.com/DvorakDwarf>"]
license = "MIT"
description = "Revolutionary, innovate, groundbreaking random number generator using race conditions to simulate a coin flip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
